--- a/FAQ.html
+++ b/FAQ.html
@@ -107,8 +107,18 @@
     <button id="myBtn"><img src="/asset/up.png" alt=""></button>
     </div>
 
-    <footer>
-        &copy; 2025 Toko Komputer Sejahtera. Semua Hak Dilindungi.
+    <footer class="footer">
+      <div class="footer-container">
+        <div class="footer-info">
+          <h3>Toko Komputer Sejahtera</h3>
+          <p>Jl. Melati No. 27, Semarang Utara, Kota Semarang, Jawa Tengah 50178</p>
+          <p>Telepon: (024) 7654-9821 | WhatsApp: +62 813-4567-8921</p>
+          <p>Email: cs@komputersejahtera.id</p>
+        </div>
+        <div class="footer-copy">
+          <p>&copy; 2025 Toko Komputer Sejahtera. All Rights Reserved.</p>
+        </div>
+      </div>
     </footer>
 </body>
 </html>
