--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Katalog Komputer Sejahtera</title>
     <link rel="icon" href="./asset/profile.png">
+    <link rel="icon" type="image/x-icon" href="/asset/logo.png">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/landingstyle.css">
     
